--- a/PokeAPI/index.html
+++ b/PokeAPI/index.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 
-<!--UA KIN HACE LOGO Y MENU DE NAVEGACION-->
+
 
 <body style="background-size: cover; background-attachment: fixed;">
   <div class="container transparente">
@@ -33,7 +33,10 @@
         <a href="poke-details.html" class="text-decoration-none text-dark ">
           <div class="card h-100">
             <div class="card-body text-center">
-              <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" class="card-img-top" alt="Bulbasaur">
+              
+              <div class="imagen-circulo">
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" class="card-img-top" alt="Bulbasaur">
+              </div>
               <h5 class="card-title mt-2">Bulbasaur</h5>
               <p class="card-text">N° #0001</p>
               <span class="badge bg-success">Planta</span>
