pullea esto charligun

--- a/PokeAPI/poke-details.html
+++ b/PokeAPI/poke-details.html
@@ -13,7 +13,9 @@
 <header>
     <div class="transparente row justify-content-center py-2">
         <div class="col-auto">
-            <img src="../IMG/PokeAPI Logo.png" alt="PokeAPI Logo" style="width: 250px; height: auto;">
+            <a href="./index.html">
+                <img src="../IMG/PokeAPI Logo.png" alt="PokeAPI Logo" style="width: 250px; height: auto;">
+            </a>
         </div>
     </div>
 </header>
