Refactor index.css and index.html
- Adjusted the size of the logo in index.css to 250px width and auto height.
- Moved the logo element inside the header tag in index.html and added an id attribute.
- Updated the CSS class in index.html to remove the transparent background and added padding to the row elements.

--- a/PokeAPI/index.html
+++ b/PokeAPI/index.html
@@ -8,20 +8,21 @@
   <link href="index.css" rel="stylesheet">
 </head>
 
-<body style="background-size: cover; background-attachment: fixed;">
-  <div class="container transparente">
-    <header>
-      <div class="container-fluid">
-        <button class="row justify-content-center"><span class="col-auto">test boton</span></button>
-        <div class="row justify-content-center mb-4">
-          <div class="col-auto">
-            <img src="../IMG/PokeAPI Logo.png" alt="PokeAPI Logo" style="width: 250px; height: auto;">
-          </div>
-        </div>
+<header>
+  <div class="container-fluid">
+    <div class="row justify-content-center mb-4">
+      <div class="col-auto">
+        <img src="../IMG/PokeAPI Logo.png" alt="PokeAPI Logo" id="logo">
       </div>
-    </header>
+    </div>
+  </div>
+</header>
+
+<body class="transparente " style="background-size: cover; background-attachment: fixed;">
+  <div class="container">
     
-    <div class="row row-cols-1 row-cols-md-4 g-4">
+    
+    <div class="row row-cols-2 row-cols-md-4 g-4 px-5">
       <div class="col py-3">
         <a href="poke-details.html" class="text-decoration-none text-dark">
           <div class="card shadow-lg h-100">
