--- a/PokeAPI/HTML/poke-details.html
+++ b/PokeAPI/HTML/poke-details.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarjeta Pokémon</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="poke-details.css" type="text/css">
+    <link rel="stylesheet" href="../CSS/poke-details.css" type="text/css">
     <meta name="description" content="Detalles del Pokémon Bulbasaur, incluyendo altura, categoría, peso y ataques.">
 
 </head>
 <header>
     <div class="transparente row justify-content-center py-2">
         <div class="col-auto">
-            <a href="./index.html">
-                <img src="../IMG/PokeAPI Logo.png" alt="PokeAPI Logo" style="width: 250px; height: auto;">
+            <a href="index.html">
+                <img src="../../IMG/PokeAPI Logo.png" alt="PokeAPI Logo" style="width: 250px; height: auto;">
             </a>
         </div>
     </div>
