--- a/PokeAPI/HTML/index.html
+++ b/PokeAPI/HTML/index.html
@@ -7,6 +7,7 @@
   <title>PokeAPI Cards</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../CSS/index.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
 </head>
 
 <header>
@@ -21,35 +22,19 @@
 
 <body class="transparente " style="background-size: cover; background-attachment: fixed;">
   <div class="container">
-
-
-    <div class="row row-cols-2 row-cols-md-4 g-4 px-5">
-      <div class="col py-3">
-        <a href="poke-details.html" class="text-decoration-none text-dark">
-          <div class="card shadow-lg h-100">
-            <div class="card-body text-center">
-              <h5 class="card-title mt-2">Bulbasaur</h5>
-              <p class="card-text">N° #0001</p>
-              <div class="imagen-circulo">
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
-                  class="card-img-top" alt="Bulbasaur">
-              </div>
-              <div class="py-3">
-                <span class="badge bg-success">Planta</span>
-                <span class="badge bg-secondary">Veneno</span>
-              </div>
-              <div>
-                <a class="text-decoration-none text-dark btn-ver-detalles py-1 px-2 rounded-3"
-                  href="./poke-details.html"><span>Ver Detalles</span></a>
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
-
-
+    <div class="row justify-content-center mb-4">
+      <div class="col-auto">
+        <div class="input-group">
+            <input type="text" id="search-input" class="form-control" placeholder="Buscar Pokémon por nombre o ID">
+            <button id="search-button" class="btn">Buscar</button>
+        </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    </div>
+    <div class="row row-cols-2 row-cols-md-4 g-4 px-5" id="pokemon-container">
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../JS/index.js"></script>
 </body>
 
 </html>
