--- a/PokeAPI/HTML/index.html
+++ b/PokeAPI/HTML/index.html
@@ -7,7 +7,7 @@
   <title>PokeAPI Cards</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../CSS/index.css" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <header>
@@ -24,13 +24,18 @@
   <div class="container">
     <div class="row justify-content-center mb-4">
       <div class="col-auto">
-        <div class="input-group">
-            <input type="text" id="search-input" class="form-control" placeholder="Buscar Pokémon por nombre o ID">
-            <button id="search-button" class="btn">Buscar</button>
+        <div class="input-group shadow-lg rounded-3">
+          <input type="text" id="search-input" class="form-control" placeholder="Buscar Pokémon por nombre o ID">
+          <button id="search-button" class="btn">Buscar</button>
         </div>
-    </div>
+      </div>
     </div>
     <div class="row row-cols-2 row-cols-md-4 g-4 px-5" id="pokemon-container">
+    </div>
+    <div class="row col-6 mx-auto">
+      <div class="col-auto mx-auto shadow-lg rounded-3 my-4">
+        <button id="see-more" class="btn text-center p-2">Ver más</button>
+      </div>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
