--- a/PokeAPI/HTML/poke-details.html
+++ b/PokeAPI/HTML/poke-details.html
@@ -21,9 +21,9 @@
 </header>
 
 <body class="transparente">
-    <div class="container mt-3">
+    <div class="container mt-3" id="data-content">
 
-        <h3 class="text-center" id="data-content">Detalles del pokémon:</h3>
+        
         
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
